# color-parser-py

./: .gitignore  Cargo.toml  README.md  pyproject.toml  requirements-dev.txt  test_colors.py
.github/workflows/: CI.yml  build-wheels.yml  ci.yml  test-build.yml  tests.yml
color_parser_py/: __init__.py
python/color_parser_py/: __init__.py  color_parser_py.pyi
src/: lib.rs
tests/: test_color_parser.py
