[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "color_parser_py"
version = "0.1.0"
description = "Python bindings for color parsing and conversion"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "color_parser_py"